Комментарий в Space не обязателен

--- a/src/main/resources/templates/addSpace.html
+++ b/src/main/resources/templates/addSpace.html
@@ -90,7 +90,7 @@
             </div>
             <div class="mb-3">
                 <label for="comment" class="form-label">Комментарий</label>
-                <input type="text" class="form-control" id="comment" th:field="*{comment}" required>
+                <input type="text" class="form-control" id="comment" th:field="*{comment}">
             </div>
             
             <button type="submit" class="btn btn-primary">Добавить</button>
